<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <ImageView
      android:layout_width="80dp"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:paddingEnd="16dp"
      android:paddingRight="16dp"
      android:paddingStart="16dp"
      android:paddingTop="16dp"
      android:src="@drawable/poweredbyguardianblack"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:text="@string/guardian_license"
      android:textSize="24sp"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:autoLink="web"
      android:text="@string/open_licence_terms_link"
      android:textSize="16sp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_margin="16dp"
      android:text="@string/contact"
      android:textSize="36sp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_margin="16dp"
      android:autoLink="email"
      android:text="@string/mail_link"
      android:textSize="16sp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_margin="8dp"
      android:autoLink="web"
      android:text="@string/linkedin_link"
      android:textSize="16sp"
      />

</LinearLayout>